tests/ui/impl-trait/in-trait/default-body-type-err-2.stderr
error[E0308]: mismatched types
  --> $DIR/default-body-type-err-2.rs:5:9
   |
LL |     async fn woopsie_async(&self) -> String {
   |                                      ------ expected `String` because of return type
LL |         42
   |         ^^ expected `String`, found integer
   |
help: try using a conversion method
   |
LL |         42.to_string()
   |           ++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
